# sailfish-device-encryption-community-settings

./: CMakeLists.txt  README.md
jolla-settings/: community-encryption.json
qml/: DevicePage.qml  ErrorPage.qml  MainPage.qml  MessagePage.qml  PasswordDialog.qml  main.qml
rpm/: settings.spec
src/: main.cpp
translations/: en.ts
